--- a/sass/Global CSS/_theme.scss
+++ b/sass/Global CSS/_theme.scss
@@ -1,7 +1,8 @@
-$color-primary: #3a00ff !default;
-$color-primary-alt: #6f6ffd !default;
-$color-secondary: #d42257 !default;
-$color-background: #d2fbf7 !default;
+//New Colors Added
+$color-primary: #110F1A !default;
+$color-primary-alt: #89192F !default;
+$color-secondary: #ffffff !default;
+$color-background: #ffffff !default;
 
 $brand-colors: (
   primary: $color-primary,
