--- a/sass/global/_fonts.scss
+++ b/sass/global/_fonts.scss
@@ -1,3 +1,46 @@
 //New Fonts Added
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Yeon+Sung&display=swap');
 
+//Mixin for each font family imported from Google Fonts
+//Call with font size variable
+@mixin heading-font($size) {
+   font-family: "Yeon Sung", serif;
+   font-weight: 400;
+   font-style: normal;
+   font-size: $size;
+}
+
+@mixin paragraph-font($size) {
+   font-family: "Quicksand", serif;
+   font-optical-sizing: auto;
+   font-style: normal;
+   font-size: $size;
+}
+
+//Base Font Stylings
+h1 {
+   @include heading-font(200px);
+}
+
+h2 {
+   @include heading-font(70px);
+}
+
+h3, h4 {
+   @include heading-font(50px);
+}
+
+p, li{
+   @include paragraph-font(45px);
+   text-decoration: none;
+   list-style: none;
+}
+
+blockquote p {
+   @include heading-font(45px);
+}
+
+a {
+   @include paragraph-font(30px);
+   text-decoration: none;
+}
