--- a/sass/global/_theme.scss
+++ b/sass/global/_theme.scss
@@ -1,12 +1,10 @@
 //New Colors Added
-$color-primary: #110F1A !default;
-$color-primary-alt: #89192F !default;
-$color-secondary: #ffffff !default;
-$color-background: #ffffff !default;
+$color-primary: #110F1A;
+$color-primary-alt: #89192F;
+$color-secondary: #ffffff;
 
 $brand-colors: (
   primary: $color-primary,
   primary-alt: $color-primary-alt,
   secondary: $color-secondary,
-) !default;
-
+);
