--- a/sass/global/_fonts.scss
+++ b/sass/global/_fonts.scss
@@ -19,28 +19,28 @@
 
 //Base Font Stylings
 h1 {
-   @include heading-font(200px);
+   @include heading-font(180px);
+   margin: 1rem;
 }
 
 h2 {
-   @include heading-font(70px);
+   @include heading-font(60px);
+   margin: 1rem;
 }
 
 h3, h4 {
-   @include heading-font(50px);
+   @include heading-font(45px);
+   margin: 1rem;
 }
 
-p, li{
-   @include paragraph-font(45px);
+p, li, a{
+   @include paragraph-font(35px);
    text-decoration: none;
    list-style: none;
+   margin: 1rem;
 }
 
 blockquote p {
-   @include heading-font(45px);
-}
-
-a {
-   @include paragraph-font(30px);
-   text-decoration: none;
+   @include heading-font(35px);
+   margin: 1rem;
 }
