--- a/public/style.css
+++ b/public/style.css
@@ -105,10 +105,19 @@ nav a {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto;
   gap: 0px 0px;
-  grid-template-areas: ". h2 h2" ". p p" ". p2 p2" "blockquote blockquote blockquote" "p3 p3 .";
+  grid-template-areas: ". h2 h2" ". p1 p1" ". p2 p2" "blockquote blockquote blockquote" "p3 p3 .";
 }
 #about h2 {
   grid-area: h2;
+}
+#about .container p:nth-child(2) {
+  grid-area: p1;
+}
+#about .container p:nth-child(3) {
+  grid-area: p2;
+}
+#about .container p:last-child {
+  grid-area: p3;
 }
 #about .container {
   margin-top: 6rem;
@@ -140,6 +149,13 @@ nav a {
   background-size: cover;
   background-position: center;
   z-index: -1;
+}
+#about a {
+  font-family: "Quicksand", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 35px;
+  border-bottom: solid 4px #89192F;
 }
 
 /*# sourceMappingURL=style.css.map */
