--- a/public/style.css
+++ b/public/style.css
@@ -100,6 +100,9 @@ nav a {
   color: #ffffff;
 }
 
+#about {
+  position: relative;
+}
 #about > :first-child {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -127,7 +130,7 @@ nav a {
 }
 #about blockquote {
   color: #89192F;
-  margin: 6rem 4rem;
+  margin: 16rem 4rem 6rem 4rem;
   grid-area: blockquote;
 }
 #about blockquote a {
@@ -156,6 +159,30 @@ nav a {
   font-style: normal;
   font-size: 35px;
   border-bottom: solid 4px #89192F;
+}
+#about h2::before {
+  content: "";
+  position: absolute;
+  top: 7rem;
+  left: 0;
+  width: 50rem;
+  height: 40rem;
+  background-image: url("../images/ink-sketches-01.svg");
+  background-size: cover;
+  background-position: left;
+  z-index: -1;
+}
+#about p:last-child::after {
+  content: "";
+  position: absolute;
+  top: 53rem;
+  right: -3rem;
+  width: 50rem;
+  height: 40rem;
+  background-image: url("../images/ink-sketches-03.svg");
+  background-size: cover;
+  background-position: right;
+  z-index: -1;
 }
 
 /*# sourceMappingURL=style.css.map */
