--- a/sass/block/_nav.scss
+++ b/sass/block/_nav.scss
@@ -11,10 +11,12 @@ nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
+   list-style: none;
    }
 
    a {
       color: $color-secondary;
+      text-decoration: none;
    }
 }
 
