--- a/public/style.css
+++ b/public/style.css
@@ -28,8 +28,6 @@ p, li, a {
   font-optical-sizing: auto;
   font-style: normal;
   font-size: 35px;
-  text-decoration: none;
-  list-style: none;
   margin: 1rem;
 }
 
@@ -65,6 +63,7 @@ header svg {
 }
 header a {
   color: #110F1A;
+  text-decoration: none;
 }
 header .link-github {
   color: #ffffff;
@@ -81,6 +80,7 @@ header .link-github svg path {
 .skip-link {
   margin: 1rem 1rem;
   color: #110F1A;
+  text-decoration: none;
 }
 
 nav {
@@ -95,9 +95,11 @@ nav ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  list-style: none;
 }
 nav a {
   color: #ffffff;
+  text-decoration: none;
 }
 
 #about {
@@ -127,6 +129,7 @@ nav a {
 }
 #about a {
   color: #110F1A;
+  text-decoration: none;
 }
 #about blockquote {
   color: #89192F;
@@ -148,6 +151,7 @@ nav a {
   align-items: center;
   padding: 10rem 20rem;
   color: #ffffff;
+  list-style: none;
   background-image: url(../../images/ink-sketches-10.svg);
   background-size: cover;
   background-position: center;
@@ -195,6 +199,7 @@ nav a {
   font-size: 35px;
   border-bottom: solid 4px #89192F;
   color: #110F1A;
+  text-decoration: none;
 }
 #guidelines h3 {
   margin-top: 4rem;
@@ -210,6 +215,46 @@ nav a {
   margin-top: 2rem;
   width: 25rem;
   height: 6rem;
+  z-index: -1;
+}
+
+#contribute {
+  position: relative;
+}
+#contribute a {
+  text-decoration: none;
+  color: #110F1A;
+  border-bottom: solid 4px #89192F;
+}
+#contribute > :first-child {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto auto auto;
+  gap: 0px 0px;
+}
+#contribute h2 {
+  grid-area: 1/2/2/3;
+}
+#contribute .container p:nth-child(2) {
+  grid-area: 2/2/3/3;
+}
+#contribute .container p:nth-child(3) {
+  grid-area: 3/2/4/3;
+}
+#contribute ol {
+  list-style: decimal;
+  list-style-type: decimal;
+}
+#contribute h2::before {
+  content: "";
+  position: absolute;
+  top: -3rem;
+  left: 8rem;
+  width: 30rem;
+  height: 30rem;
+  background-image: url("../images/ink-sketches-03.svg");
+  background-size: cover;
+  background-position: left;
   z-index: -1;
 }
 
