--- a/sass/block/_contribute.scss
+++ b/sass/block/_contribute.scss
@@ -46,5 +46,52 @@
       background-size: cover;
       background-position: left;
       z-index: -1;
+   }
+
+   //Footer
+   footer {
+      margin-top: 6rem;
+
+      .container {
+         text-align: center;
+         display: grid; 
+         grid-template-columns: 1fr 1fr 1fr; 
+         grid-template-rows: auto auto; 
+         gap: 0px 0px; 
+         grid-template-areas: 
+            "h3 h3 h3"
+            "a1 a2 a3"; 
       }
+
+      h3 {
+         grid-area:h3
+      }
+
+      .container a:nth-child(2) {
+         grid-area: a1;
+      }
+
+      .container a:nth-child(3) {
+         grid-area: a2;
+      }
+
+      .container a:nth-child(4) {
+         grid-area: a3;
+      }
+
+      .container a{
+         border: none;
+         color: $color-secondary;
+         padding: 4rem;
+         background-image: url(../../images/ink-sketches-10.svg);
+         background-size: 200% 200%;
+         background-position: center;
+         background-repeat: no-repeat;
+         display: block;
+         margin-top: 2rem;
+         z-index: -1;
+         border-radius: 2rem;
+      } //CONSIDER CHANGING
+   }
+
 }
