--- a/public/style.css
+++ b/public/style.css
@@ -259,6 +259,12 @@ nav a {
 }
 #contribute footer {
   margin-top: 6rem;
+  border: none;
+  color: #ffffff;
+  padding: 4rem;
+  background-image: url(../../images/ink-sketches-10.svg);
+  background-size: cover;
+  background-position: center;
 }
 #contribute footer .container {
   text-align: center;
@@ -282,16 +288,10 @@ nav a {
 }
 #contribute footer .container a {
   border: none;
-  color: #ffffff;
-  padding: 4rem;
-  background-image: url(../../images/ink-sketches-10.svg);
-  background-size: 200% 200%;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: block;
-  margin-top: 2rem;
-  z-index: -1;
-  border-radius: 2rem;
+  background-color: #ffffff;
+  padding: 3rem 1rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
 /*# sourceMappingURL=style.css.map */
