--- a/sass/block/_contribute.scss
+++ b/sass/block/_contribute.scss
@@ -79,19 +79,22 @@
          grid-area: a3;
       }
 
-      .container a{
+      .container a {
          border: none;
-         color: $color-secondary;
-         padding: 4rem;
-         background-image: url(../../images/ink-sketches-10.svg);
-         background-size: 200% 200%;
-         background-position: center;
-         background-repeat: no-repeat;
-         display: block;
-         margin-top: 2rem;
-         z-index: -1;
-         border-radius: 2rem;
-      } //CONSIDER CHANGING
+         background-color: $color-secondary;
+         padding: 3rem 1rem;
+         border-radius: 1rem;
+         box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+      }
+
+      //background
+      border: none;
+      color: $color-secondary;
+      padding: 4rem;
+      background-image: url(../../images/ink-sketches-10.svg);
+      background-size: cover;
+      background-position: center;
+
    }
 
 }
