--- a/public/style.css
+++ b/public/style.css
@@ -294,6 +294,44 @@ nav a {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
 }
 
+#styles {
+  margin-top: 6rem;
+}
+#styles h2 {
+  text-align: center;
+}
+#styles ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px 30px;
+  list-style: none;
+}
+#styles li {
+  text-decoration: none;
+  text-align: center;
+  color: #ffffff;
+  background-color: #89192F;
+  border-radius: 1rem;
+  padding: 4rem 1rem;
+}
+#styles li a {
+  color: #ffffff;
+}
+#styles .container > a {
+  text-align: center;
+  border: none;
+  color: #ffffff;
+  padding: 3rem;
+  margin: 0 auto;
+  background-image: url(../../images/ink-sketches-08.svg);
+  display: block;
+  background-size: cover;
+  background-position: center;
+  width: 25rem;
+  height: 6rem;
+  z-index: -1;
+}
+
 .profile {
   position: relative;
   margin-top: 6rem;
