--- a/public/style.css
+++ b/public/style.css
@@ -1,297 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Yeon+Sung&display=swap");
-h1 {
-  font-family: "Yeon Sung", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 180px;
-  margin: 1rem;
-}
+/* Error: Can't find stylesheet to import.
+ *    ,
+ * 18 | @import "block/files";
+ *    |         ^^^^^^^^^^^^^
+ *    '
+ *   sass\style.scss 18:9  root stylesheet */
 
-h2 {
-  font-family: "Yeon Sung", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 60px;
-  margin: 1rem;
-}
-
-h3, h4 {
-  font-family: "Yeon Sung", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 45px;
-  margin: 1rem;
-}
-
-p, li, a {
-  font-family: "Quicksand", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-size: 35px;
-  margin: 1rem;
-}
-
-blockquote p {
-  font-family: "Yeon Sung", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 35px;
-  margin: 1rem;
-}
-
-header {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  color: #110F1A;
-  position: relative;
-}
-header::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: -2rem;
-  width: 60rem;
-  height: 50rem;
-  background-image: url("../images/ink-sketches-02.svg");
-  background-size: cover;
-  background-position: right;
-  z-index: -1;
-}
-header svg {
-  width: 2rem;
-  margin-top: 3rem;
-}
-header a {
-  color: #110F1A;
-  text-decoration: none;
-}
-header .link-github {
-  color: #ffffff;
-  padding: 3rem;
-  background-image: url(../../images/ink-sketches-08.svg);
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-}
-header .link-github svg path {
-  fill: #ffffff;
-}
-
-.skip-link {
-  margin: 1rem 1rem;
-  color: #110F1A;
-  text-decoration: none;
-}
-
-nav {
-  margin: 8rem 0 3rem 0;
-  padding: 8rem 8rem;
-  background-image: url(../../images/ink-sketches-09.svg);
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-}
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-}
-nav a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-#about {
-  position: relative;
-}
-#about > :first-child {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto;
-  gap: 0px 0px;
-  grid-template-areas: ". h2 h2" ". p1 p1" ". p2 p2" "blockquote blockquote blockquote" "p3 p3 .";
-}
-#about h2 {
-  grid-area: h2;
-}
-#about .container p:nth-child(2) {
-  grid-area: p1;
-}
-#about .container p:nth-child(3) {
-  grid-area: p2;
-}
-#about .container p:last-child {
-  grid-area: p3;
-}
-#about .container {
-  margin-top: 6rem;
-}
-#about a {
-  color: #110F1A;
-  text-decoration: none;
-}
-#about blockquote {
-  color: #89192F;
-  margin: 16rem 4rem 6rem 4rem;
-  grid-area: blockquote;
-}
-#about blockquote a {
-  font-family: "Yeon Sung", serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 35px;
-  color: #89192F;
-  border-bottom: solid 4px #89192F;
-}
-#about ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 10rem 20rem;
-  color: #ffffff;
-  list-style: none;
-  background-image: url(../../images/ink-sketches-10.svg);
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-}
-#about a {
-  font-family: "Quicksand", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-size: 35px;
-  border-bottom: solid 4px #89192F;
-}
-#about h2::before {
-  content: "";
-  position: absolute;
-  top: 7rem;
-  left: 0;
-  width: 50rem;
-  height: 40rem;
-  background-image: url("../images/ink-sketches-01.svg");
-  background-size: cover;
-  background-position: left;
-  z-index: -1;
-}
-#about p:last-child::after {
-  content: "";
-  position: absolute;
-  top: 53rem;
-  right: -3rem;
-  width: 50rem;
-  height: 40rem;
-  background-image: url("../images/ink-sketches-03.svg");
-  background-size: cover;
-  background-position: right;
-  z-index: -1;
-}
-
-#guidelines .container {
-  margin-top: 6rem;
-}
-#guidelines a {
-  font-family: "Quicksand", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-size: 35px;
-  border-bottom: solid 4px #89192F;
-  color: #110F1A;
-  text-decoration: none;
-}
-#guidelines h3 {
-  margin-top: 4rem;
-}
-#guidelines .link-guidelines {
-  border: none;
-  color: #ffffff;
-  padding: 5rem;
-  background-image: url(../../images/ink-sketches-07.svg);
-  background-size: cover;
-  background-position: center;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  margin-top: 2rem;
-  width: 25rem;
-  height: 6rem;
-  z-index: -1;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a    \2577 \a 18 \2502  @import \"block/files\";\d\a    \2502          ^^^^^^^^^^^^^\a    \2575 \a   sass\\style.scss 18:9  root stylesheet";
 }
-
-#contribute {
-  position: relative;
-}
-#contribute a {
-  text-decoration: none;
-  color: #110F1A;
-  border-bottom: solid 4px #89192F;
-}
-#contribute > :first-child {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: auto auto auto;
-  gap: 0px 0px;
-}
-#contribute h2 {
-  grid-area: 1/2/2/3;
-}
-#contribute .container p:nth-child(2) {
-  grid-area: 2/2/3/3;
-}
-#contribute .container p:nth-child(3) {
-  grid-area: 3/2/4/3;
-}
-#contribute ol {
-  list-style: decimal;
-  list-style-type: decimal;
-}
-#contribute h2::before {
-  content: "";
-  position: absolute;
-  top: -3rem;
-  left: 8rem;
-  width: 30rem;
-  height: 30rem;
-  background-image: url("../images/ink-sketches-03.svg");
-  background-size: cover;
-  background-position: left;
-  z-index: -1;
-}
-#contribute footer {
-  margin-top: 6rem;
-}
-#contribute footer .container {
-  text-align: center;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto;
-  gap: 0px 0px;
-  grid-template-areas: "h3 h3 h3" "a1 a2 a3";
-}
-#contribute footer h3 {
-  grid-area: h3;
-}
-#contribute footer .container a:nth-child(2) {
-  grid-area: a1;
-}
-#contribute footer .container a:nth-child(3) {
-  grid-area: a2;
-}
-#contribute footer .container a:nth-child(4) {
-  grid-area: a3;
-}
-#contribute footer .container a {
-  border: none;
-  color: #ffffff;
-  padding: 4rem;
-  background-image: url(../../images/ink-sketches-10.svg);
-  background-size: 200% 200%;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: block;
-  margin-top: 2rem;
-  z-index: -1;
-  border-radius: 2rem;
-}
-
-/*# sourceMappingURL=style.css.map */
