--- a/public/style.css
+++ b/public/style.css
@@ -371,4 +371,41 @@ nav a {
   z-index: -1;
 }
 
+.page-footer {
+  margin-top: 10rem;
+  padding: 4rem 1rem;
+  text-align: center;
+  background-image: url(../../images/ink-sketches-06.svg);
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+}
+.page-footer p {
+  color: #ffffff;
+}
+.page-footer ul {
+  list-style: none;
+  margin: 6rem 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.page-footer ul li {
+  background-color: #ffffff;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+}
+.page-footer ul li a {
+  color: #110F1A;
+  text-decoration: none;
+}
+.page-footer svg {
+  width: 2rem;
+  margin-top: 3rem;
+}
+.page-footer p a {
+  text-decoration: none;
+  color: #ffffff;
+  border-bottom: solid 4px #89192F;
+}
+
 /*# sourceMappingURL=style.css.map */
