--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,10 @@
+//global
 @import "global/fonts";
-
-// You can modify the theme directly, or override some of the variables
-// Overrides just need placed prior to the theme import
-// For example:
-// $color-primary: #3a0;
 @import "global/theme";
 @import "global/layout";
-@import "block/header";
 
-//Empty Still
+//block
+@import "block/header";
 @import "block/nav";
 @import "block/about";
 @import "block/guidelines";
@@ -16,3 +12,6 @@
 @import "block/styles";
 @import "block/profile";
 @import "block/footer";
+
+//utility
+@import "utility/responsive";
