--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,24 @@ blockquote p {
   margin: 1rem;
 }
 
+* {
+  cursor: url("../../images/ink-cursor-11.svg"), auto;
+}
+
+a,
+.page-footer ul li a {
+  cursor: url("../../images/ink-cursor-12.svg"), auto;
+}
+
+.link-github,
+nav li a,
+.link-guidelines,
+.profile a:last-of-type,
+.link-allstyles,
+.page-footer p a {
+  cursor: url("../../images/ink-cursor-13.svg"), auto;
+}
+
 header {
   display: grid;
   grid-template-columns: 2fr 1fr;
