--- a/public/style.css
+++ b/public/style.css
@@ -411,28 +411,14 @@ nav a {
   background-color: #ffffff;
   border-radius: 1rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;        /*Vertical alignment in the center*/
-  justify-content: flex-start; /*Content aligned to the left*/
-  height: 100px;
-  padding-left: 20px;
 }
 .page-footer ul li a {
   color: #110F1A;
   text-decoration: none;
-  font-weight: bold;
-  font-size: 25px;
-  display: flex;              /* Use flexbox for side-by-side layout*/
-  align-items: center;        /* Keep the star and text vertically aligned*/
-  justify-content: flex-start;
-  gap: 10px;                 /* Add space between the text and the star*/
-  width: 100%;
 }
-.page-footer ul li a svg {
-  position: relative;
-  top: -2px;                 /* Adjust to perfectly align with the text*/
-  width: 20px;
-  height: 20px;
+.page-footer svg {
+  width: 2rem;
+  margin-top: 3rem;
 }
 .page-footer p a {
   text-decoration: none;
