--- a/public/style.css
+++ b/public/style.css
@@ -526,30 +526,19 @@ nav a {
   background-color: #ffffff;
   border-radius: 1rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-  display: flex;             /* Use flexbox to center items */
-  align-items: center;       /* Center vertically */
-  justify-content: center;   /* Center horizontally */
-  padding: 10px;             /* Ensure enough space inside */
-  min-height: 3rem;          /* Ensures all items are the same height */
 }
 .page-footer ul li a {
   color: #110F1A;
   text-decoration: none;
-  display: flex;             /* Ensures icon and text stay aligned */
-  align-items: center;       /* Centers content */
-  gap: 8px;                  /* Adds space between the text and the icon */
 }
-.page-footer ul li svg {
-  width: 1.5rem;
-  margin-top: 1.5rem;
-  margin: 0;
+.page-footer svg {
+  width: 2rem;
+  margin-top: 3rem;
 }
 .page-footer p a {
   text-decoration: none;
   color: #ffffff;
   border-bottom: solid 4px #89192F;
 }
-
-
 
 /*# sourceMappingURL=style.css.map */
