--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -32,7 +32,9 @@ header {
       background-image: url(../../images/ink-sketches-08.svg);
       background-size: cover;
       background-position: center;
+      background-repeat: no-repeat;
       z-index: -1;
+      transition: background-size 0.3s ease-in-out;
    }
 
    .link-github svg path {
