--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -38,7 +38,9 @@ header {
    .link-github svg path {
       fill: $color-secondary;
    }
-}
+
+   @include small-screen;
+}   
 
 .skip-link {
    margin: 1rem 1rem;
