--- a/sass/block/_nav.scss
+++ b/sass/block/_nav.scss
@@ -18,6 +18,8 @@ nav {
       color: $color-secondary;
       text-decoration: none;
    }
+
+   @include small-screen;
 }
 
 //ADD ANIMATION AND HOVER EFFECTS!
