--- a/sass/global/_layout.scss
+++ b/sass/global/_layout.scss
@@ -2,3 +2,41 @@
    display: grid;
    grid-template-columns: 2fr 1fr;
 }
+
+@mixin one-grid-left {
+   display: grid;
+   grid-template-columns: 1fr;
+}
+
+@mixin small-screen {
+   @media (max-width: 550px) {
+      max-width: 100%;
+
+      display: grid;
+      grid-template-columns: 1fr;
+
+      text-align: center;
+      font-size: smaller;
+
+      h1 {
+         font-size: 8rem;
+         margin-top: 6rem;
+         margin-bottom: 18rem;
+      }
+
+      h2 {
+         font-size: 2.5rem;
+      }
+
+      p, a {
+         font-size: 1.5rem;
+      }
+
+      &::after {
+         content: "";
+         background-image: url("../images/ink-sketches-02.svg");
+         background-size: cover;
+         z-index: -1;
+      }
+   }
+}
