--- a/sass/block/_about.scss
+++ b/sass/block/_about.scss
@@ -107,16 +107,19 @@
       @include small-screen;
       margin: 0px;
    }
-   @media (max-width: 550px) {
+   @media (max-width: 550px) { 
       & > :first-child {
-         display: block; 
-         grid-template-columns: 1fr;
-         grid-template-areas: none;
+         display: block;
+      }
+
+      * {
+         display: block;
       }
 
       //position background images between text
       & h2::before {
          top: 28rem;
+         max-width: 100%;
       }
 
       blockquote {
