--- a/sass/global/_layout.scss
+++ b/sass/global/_layout.scss
@@ -10,10 +10,12 @@
 
 @mixin small-screen {
    @media (max-width: 550px) {
-      max-width: 100%;
+      * {
+         max-width: 100%;
+         
+      }
 
-      display: grid;
-      grid-template-columns: 1fr;
+      display: block;
 
       text-align: center;
       font-size: smaller;
@@ -44,6 +46,7 @@
 @media (max-width: 550px) {
    body {
       margin-left: 0px;
+      margin-right: 0px;
       max-width: 100%;
    }
 }
