--- a/sass/block/_nav.scss
+++ b/sass/block/_nav.scss
@@ -20,6 +20,14 @@ nav {
    }
 
    @include small-screen;
+
+   @media (max-width: 768px) {
+      ul {
+         padding-left: 0px;
+         display: block;
+         text-align: center;
+      }
+   }
 }
 
 //ADD ANIMATION AND HOVER EFFECTS!
