--- a/sass/block/_nav.scss
+++ b/sass/block/_nav.scss
@@ -2,7 +2,7 @@ nav {
    margin: 8rem 0 3rem 0;
    padding: 8rem 8rem;
 
-   background-image: url(../../images/ink-sketches-09.svg);
+   background-image: url(/images/ink-sketches-09.svg);
    background-size: cover;
    background-position: center;
    z-index: 10000;
@@ -20,4 +20,4 @@ nav {
    }
 }
 
-//ADD ANIMATION AND HOVER EFFECTS!
+//ADD ANIMATION AND HOVER EFFECTS!F
