--- a/sass/block/_about.scss
+++ b/sass/block/_about.scss
@@ -62,7 +62,7 @@
       color: $color-secondary;
       list-style: none;
 
-      background-image: url(../../images/ink-sketches-10.svg);
+      background-image: url(./images/ink-sketches-10.svg);
       background-size: cover;
       background-position: center;
       z-index: -1;
