--- a/public/style.css
+++ b/public/style.css
@@ -127,7 +127,8 @@ header div p::after {
     opacity: 1;
   }
   100% {
-    transform: translateY(100vh) rotate(360deg); /* Moves flower to bottom */
+    transform: translateY(100vh) rotate(360deg);
+    /* Moves flower to bottom */
     opacity: 0;
   }
 }
@@ -138,7 +139,8 @@ header div h2::before,
 header div h2::after,
 header div p::before,
 header div p::after {
-  animation: fall 6s linear infinite; /* Duration: 6s, Infinite loop */
+  animation: fall 6s linear infinite;
+  /* Duration: 6s, Infinite loop */
 }
 
 /* Add variations so flowers fall at different speeds */
@@ -170,6 +172,13 @@ header div p::before {
 header div p::after {
   animation-duration: 9s;
   animation-delay: 2.5s;
+}
+
+.link-github:hover::after,
+.link-guidelines:hover::after,
+.profile a:last-of-type:hover::after,
+.link-allstyles:hover::after {
+  transform: translate(-50%, -50%) sale(1.1);
 }
 
 header {
@@ -512,52 +521,31 @@ nav a {
   background-size: cover;
   background-position: center;
   z-index: -1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 .page-footer p {
   color: #ffffff;
-  text-align: center;
 }
 .page-footer ul {
   list-style: none;
   margin: 6rem 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .page-footer ul li {
   background-color: #ffffff;
   border-radius: 1rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-  padding: 1rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 150px;
 }
 .page-footer ul li a {
   color: #110F1A;
   text-decoration: none;
-  display: flex;
-  align-items: center;
-  gap: 10px;
 }
-.page-footer a.link-github svg {
+.page-footer svg {
   width: 2rem;
-  height: 2rem;
-  margin: 0;
-  position: relative;
-  top: 2px; 
+  margin-top: 3rem;
 }
 .page-footer p a {
   text-decoration: none;
   color: #ffffff;
   border-bottom: solid 4px #89192F;
 }
-
-/*# sourceMappingURL=style.css.map */
