--- a/public/style.css
+++ b/public/style.css
@@ -127,8 +127,7 @@ header div p::after {
     opacity: 1;
   }
   100% {
-    transform: translateY(100vh) rotate(360deg);
-    /* Moves flower to bottom */
+    transform: translateY(100vh) rotate(360deg); /* Moves flower to bottom */
     opacity: 0;
   }
 }
@@ -139,8 +138,7 @@ header div h2::before,
 header div h2::after,
 header div p::before,
 header div p::after {
-  animation: fall 6s linear infinite;
-  /* Duration: 6s, Infinite loop */
+  animation: fall 6s linear infinite; /* Duration: 6s, Infinite loop */
 }
 
 /* Add variations so flowers fall at different speeds */
@@ -172,23 +170,6 @@ header div p::before {
 header div p::after {
   animation-duration: 9s;
   animation-delay: 2.5s;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #89192F;
-  border-radius: 10px;
-  transition: background 0.3s ease;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #110F1A;
-}
-
-.link-github:hover::after,
-.link-guidelines:hover::after,
-.profile a:last-of-type:hover::after,
-.link-allstyles:hover::after {
-  transform: translate(-50%, -50%) sale(1.1);
 }
 
 header {
@@ -223,9 +204,7 @@ header .link-github {
   background-image: url(../../images/ink-sketches-08.svg);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   z-index: -1;
-  transition: background-size 0.3s ease-in-out;
 }
 header .link-github svg path {
   fill: #ffffff;
@@ -240,10 +219,10 @@ header .link-github svg path {
 nav {
   margin: 8rem 0 3rem 0;
   padding: 8rem 8rem;
-  background-image: url(/images/ink-sketches-09.svg);
+  background-image: url(../../images/ink-sketches-09.svg);
   background-size: cover;
   background-position: center;
-  z-index: 10000;
+  z-index: -1;
 }
 nav ul {
   display: flex;
@@ -306,7 +285,7 @@ nav a {
   padding: 10rem 20rem;
   color: #ffffff;
   list-style: none;
-  background-image: url(./images/ink-sketches-10.svg);
+  background-image: url(../../images/ink-sketches-10.svg);
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -365,13 +344,11 @@ nav a {
   background-image: url(../../images/ink-sketches-07.svg);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   display: block;
   margin-top: 2rem;
   width: 25rem;
   height: 6rem;
   z-index: -1;
-  transition: background-size 0.3s ease-in-out;
 }
 
 #contribute {
@@ -418,17 +395,14 @@ nav a {
   border: none;
   color: #ffffff;
   padding: 4rem;
-  background-image: url(../../images/ink-sketches-10.svg);
   background-size: cover;
   background-position: center;
 }
 #contribute footer .container {
-  text-align: center;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto;
-  gap: 0px 0px;
-  grid-template-areas: "h3 h3 h3" "a1 a2 a3";
+  display: grid table-row;
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 30px 30px;
+      list-style: none;
 }
 #contribute footer h3 {
   grid-area: h3;
@@ -443,11 +417,12 @@ nav a {
   grid-area: a3;
 }
 #contribute footer .container a {
-  border: none;
-  background-color: #ffffff;
-  padding: 3rem 1rem;
+  text-decoration: none;
+  text-align: center;
+  color: #ffffff;
+  background-color: #89192F;
   border-radius: 1rem;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+  padding: 4rem 1rem;
 }
 
 #styles {
@@ -510,11 +485,9 @@ nav a {
   display: block;
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   width: 25rem;
   height: 6rem;
   z-index: -1;
-  transition: background-size 0.3s ease-in-out;
 }
 .profile::after {
   content: "";
@@ -537,31 +510,52 @@ nav a {
   background-size: cover;
   background-position: center;
   z-index: -1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .page-footer p {
   color: #ffffff;
+  text-align: center;
 }
 .page-footer ul {
   list-style: none;
   margin: 6rem 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 .page-footer ul li {
   background-color: #ffffff;
   border-radius: 1rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+  padding: 1rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 150px;
 }
 .page-footer ul li a {
   color: #110F1A;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
-.page-footer svg {
+.page-footer a.link-github svg {
   width: 2rem;
-  margin-top: 3rem;
+  height: 2rem;
+  margin: 0;
+  position: relative;
+  top: 2px; 
 }
 .page-footer p a {
   text-decoration: none;
   color: #ffffff;
   border-bottom: solid 4px #89192F;
 }
+
+/*# sourceMappingURL=style.css.map */
