--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -1,7 +1,8 @@
 header {
-   @include two-grid-left;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
    color: $color-primary;
-   position: relative;
+   position: relative; /* Ensure positioning context for ::after */
 
    &::after {
       content: "";
@@ -11,9 +12,39 @@ header {
       width: 60rem;
       height: 50rem;
       background-image: url("../images/ink-sketches-02.svg");
-      background-size: cover;
-      background-position: right;
+      background-size: auto 100%; /* Maintain aspect ratio with full height */
+      background-position: right calc(100% - 100%) top; /*Pin background image to top-right*/
+      background-repeat: no-repeat;
       z-index: -1;
+   }
+
+   @media (max-width: 1250px) {
+      display: block;
+      text-align: center;
+      position: relative;
+      min-height: 1300px; /* Ensure enough space for the image */
+      margin-bottom: -220px;
+  
+      &::after {
+         content: "";
+         position: absolute;
+         top: auto;
+         left: 48%; /* Horizontally center the background image */
+         transform: translateX(-50%);
+         bottom: 0;
+         width: 60rem;
+         height: 50rem;
+         background-image: url("../images/ink-sketches-02.svg");
+         background-size: auto 100%; 
+         background-position: center bottom; /* Pin background image to bottom-left */
+         background-repeat: no-repeat;
+         z-index: -1;
+
+         @media (max-width: 870px) {
+            width: 40rem;
+            height: 35rem;
+         }
+      }
    }
 
    svg {
@@ -42,6 +73,12 @@ header {
    }
 
    @include small-screen;
+
+   @media (max-width: 550px) {
+      h1 {
+         margin: 20px;
+      }
+   }
 }
 
 .skip-link {
