--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ h1 {
   font-family: "Yeon Sung", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 180px;
+  font-size: 160px;
   margin: 1rem;
 }
 
@@ -11,7 +11,7 @@ h2 {
   font-family: "Yeon Sung", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 60px;
+  font-size: 50px;
   margin: 1rem;
 }
 
@@ -19,7 +19,7 @@ h3, h4 {
   font-family: "Yeon Sung", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 45px;
+  font-size: 35px;
   margin: 1rem;
 }
 
@@ -27,7 +27,7 @@ p, li, a {
   font-family: "Quicksand", serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-size: 35px;
+  font-size: 25px;
   margin: 1rem;
 }
 
@@ -35,7 +35,7 @@ blockquote p {
   font-family: "Yeon Sung", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 35px;
+  font-size: 25px;
   margin: 1rem;
 }
 
@@ -184,6 +184,15 @@ header div p::after {
   background: #110F1A;
 }
 
+body {
+  max-width: 2000px;
+}
+@media (min-width: 2000px) {
+  body {
+    margin: 0 auto;
+  }
+}
+
 .link-github:hover::after,
 .link-guidelines:hover::after,
 .profile a:last-of-type:hover::after,
@@ -200,9 +209,10 @@ header div p::after {
 }
 header {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
   color: #110F1A;
   position: relative;
+  /* Ensure positioning context for ::after */
 }
 header::after {
   content: "";
@@ -212,9 +222,45 @@ header::after {
   width: 60rem;
   height: 50rem;
   background-image: url("../images/ink-sketches-02.svg");
-  background-size: cover;
-  background-position: right;
+  background-size: auto 100%;
+  /* Maintain aspect ratio with full height */
+  background-position: right calc(100% - 100%) top;
+  /*Pin background image to top-right*/
+  background-repeat: no-repeat;
   z-index: -1;
+}
+@media (max-width: 1250px) {
+  header {
+    display: block;
+    text-align: center;
+    position: relative;
+    min-height: 1300px;
+    /* Ensure enough space for the image */
+    margin-bottom: -220px;
+  }
+  header::after {
+    content: "";
+    position: absolute;
+    top: auto;
+    left: 48%;
+    /* Horizontally center the background image */
+    transform: translateX(-50%);
+    bottom: 0;
+    width: 60rem;
+    height: 50rem;
+    background-image: url("../images/ink-sketches-02.svg");
+    background-size: auto 100%;
+    background-position: center bottom;
+    /* Pin background image to bottom-left */
+    background-repeat: no-repeat;
+    z-index: -1;
+  }
+}
+@media (max-width: 1250px) and (max-width: 870px) {
+  header::after {
+    width: 40rem;
+    height: 35rem;
+  }
 }
 header svg {
   width: 2rem;
@@ -241,27 +287,32 @@ header .link-github svg path {
   header {
     display: block;
     text-align: center;
-    font-size: smaller;
+    font-size: normal;
   }
   header * {
     max-width: 100%;
   }
   header h1 {
-    font-size: 8rem;
+    font-size: 9rem;
     margin-top: 6rem;
     margin-bottom: 18rem;
   }
   header h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   header p, header a {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   header::after {
     content: "";
     background-image: url("../images/ink-sketches-02.svg");
     background-size: cover;
     z-index: -1;
+  }
+}
+@media (max-width: 550px) {
+  header h1 {
+    margin: 20px;
   }
 }
 
@@ -293,21 +344,21 @@ nav a {
   nav {
     display: block;
     text-align: center;
-    font-size: smaller;
+    font-size: normal;
   }
   nav * {
     max-width: 100%;
   }
   nav h1 {
-    font-size: 8rem;
+    font-size: 9rem;
     margin-top: 6rem;
     margin-bottom: 18rem;
   }
   nav h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   nav p, nav a {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   nav::after {
     content: "";
@@ -414,21 +465,21 @@ nav a {
   #about * {
     display: block;
     text-align: center;
-    font-size: smaller;
+    font-size: normal;
   }
   #about * * {
     max-width: 100%;
   }
   #about * h1 {
-    font-size: 8rem;
+    font-size: 9rem;
     margin-top: 6rem;
     margin-bottom: 18rem;
   }
   #about * h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   #about * p, #about * a {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   #about *::after {
     content: "";
@@ -506,21 +557,21 @@ nav a {
   #guidelines * {
     display: block;
     text-align: center;
-    font-size: smaller;
+    font-size: normal;
   }
   #guidelines * * {
     max-width: 100%;
   }
   #guidelines * h1 {
-    font-size: 8rem;
+    font-size: 9rem;
     margin-top: 6rem;
     margin-bottom: 18rem;
   }
   #guidelines * h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   #guidelines * p, #guidelines * a {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   #guidelines *::after {
     content: "";
@@ -624,21 +675,21 @@ nav a {
   #contribute {
     display: block;
     text-align: center;
-    font-size: smaller;
+    font-size: normal;
   }
   #contribute * {
     max-width: 100%;
   }
   #contribute h1 {
-    font-size: 8rem;
+    font-size: 9rem;
     margin-top: 6rem;
     margin-bottom: 18rem;
   }
   #contribute h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   #contribute p, #contribute a {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   #contribute::after {
     content: "";
@@ -824,21 +875,21 @@ nav a {
   .page-footer {
     display: block;
     text-align: center;
-    font-size: smaller;
+    font-size: normal;
   }
   .page-footer * {
     max-width: 100%;
   }
   .page-footer h1 {
-    font-size: 8rem;
+    font-size: 9rem;
     margin-top: 6rem;
     margin-bottom: 18rem;
   }
   .page-footer h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   .page-footer p, .page-footer a {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   .page-footer::after {
     content: "";
