--- a/sass/global/_layout.scss
+++ b/sass/global/_layout.scss
@@ -1,8 +1,9 @@
 body {
-   max-width: 2000px;
+   max-width: 1800px;
+   margin: 0px;
    
    //align body to center when screen is larger than 2000px
-   @media (min-width: 2000px) {
+   @media (min-width: 1800px) {
       margin: 0 auto;
       }
 }
